--- a/css/grid.css
+++ b/css/grid.css
@@ -35,6 +35,4 @@
 .grid_2_of_12  { width: 15.33%; }
 .grid_1_of_12  { width: 6.866%; }
 
-/*http://nicolasgallagher.com/micro-clearfix-hack/
-https://www.sitepoint.com/understanding-css-grid-systems/
-*/
+/* http://nicolasgallagher.com/micro-clearfix-hack/ https://www.sitepoint.com/understanding-css-grid-systems/ */
