--- a/style.css
+++ b/style.css
@@ -17,3 +17,15 @@ Text Domain: lora
 
 /* Using rem font sizing (Root em’s) with fallback to px for ie8 and below - http://snook.ca/archives/html_and_css/font-size-with-rem */
 body { margin: 0; font-size: 16px; font-size: 1rem; line-height: 1.5; }
+
+::-webkit-selection { background: #7fff00; color: #000; text-shadow: none; }
+::-moz-selection { background: #7fff00; color: #000; text-shadow: none; }
+::selection { background: #7fff00; color: #000; text-shadow: none; }
+
+a { color: #333; text-decoration: underline; }
+a:visited { color: #666; }
+a:hover { color: #b40101; }
+
+menu { padding: 0; }
+
+td { vertical-align: top; }
